fixed technology section no overflow on mobile and positioning of icons

--- a/src/style.css
+++ b/src/style.css
@@ -179,6 +179,9 @@
       .technology{
         grid-template-columns: 1fr;
       }
+      .list{
+        display: none;
+      }
 
   }
   
